--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,7 @@
         <button class="h toptab" data-url="projects">Projects</button>
         <button class="toptab" data-url="talks">Talks</button>
         <button class="toptab" data-url="about">About</button>
+        <button class="toptab"><a href="codebeat">{ codebeat } AtoZ</a></button>
       </div>
     </div>
     <!-- projects -->
