--- a/talks/index.htm
+++ b/talks/index.htm
@@ -1,4 +1,4 @@
 <script type="text/javascript">
   window.name = 'talks'
-  window.location.href = '/slasho'
+  window.location.href = '/'
 </script>
