--- a/about/index.htm
+++ b/about/index.htm
@@ -1,4 +1,4 @@
 <script type="text/javascript">
   window.name = 'about'
-  window.location.href = '/'
+  window.location.href = '/slasho/'
 </script>
