--- a/projects/index.htm
+++ b/projects/index.htm
@@ -1,4 +1,4 @@
 <script type="text/javascript">
   window.name = 'projects'
-  window.location.href = '/'
+  window.location.href = '/slasho/'
 </script>
